--- a/adi/package.json
+++ b/adi/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
+    "stylis": "^4.3.6",
+    "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/stylis": "^4.2.7",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
